# ThaneHunt_BLE_HID_KEYBOARD_nRF54

ThaneHunt_Project/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  create_component.py  prj.conf  sample.yaml
ThaneHunt_Project/Documents/: ThaneHunt BLE HID Keyboard — Full Project Documentation.docx
ThaneHunt_Project/PreBuild_Binaries/: merged.hex
ThaneHunt_Project/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  panb511evb_nrf54l15_cpuapp.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
ThaneHunt_Project/components/app_ble/: app_ble.c  app_ble.h
ThaneHunt_Project/components/app_button/: app_button.c  app_button.h
ThaneHunt_Project/components/app_hid/: app_hid.c  app_hid.h
ThaneHunt_Project/components/app_imu/: app_imu.c  app_imu.h
ThaneHunt_Project/components/app_keycodes/: app_keycodes.c  app_keycodes.h
ThaneHunt_Project/components/app_sleep/: app_sleep.c  app_sleep.h
ThaneHunt_Project/src/: main.c
ThaneHunt_Project/sysbuild/ipc_radio/: prj.conf
